@@ -62,10 +62,10 @@ DIST python-gentoo-patches-2.5.4-r2.tar.bz2 20722 RMD160 86c25ad3647b7a3ca44c8e7
 DIST python-gentoo-patches-2.6.2-r4.tar.bz2 11802 RMD160 d04d80d3ed2ead001dbdbe24a89e8cfe5e6e56c7 SHA1 eca475efb4dd47f688fa49d510ae8f53afe3dff0 SHA256 a0b881c332991aafd885a337432c9ef3c4a29d41ed50898e12261801aad6f83a
 DIST python-gentoo-patches-2.6.2-r5.tar.bz2 12206 RMD160 43f321ac4df2b4c6ccb5777d3627c089d46b9024 SHA1 2e35f77a7216b61a9aac9508eac2ddce882c993a SHA256 f3e1593911130ed4bb5879c13e5afa4edd0a873682e1e8609184ec24cae244e1
 DIST python-gentoo-patches-3.1.1-r2.tar.bz2 8929 RMD160 26afbdbbec3bf0e394cb3082d77abd75d4c75a6b SHA1 e7e775954777a336eff8e9c6c2600d053338fdb2 SHA256 d72acfbf1adeb0ab19da4833bf4663acc9ba4518c614ca92e990dde088d9a07c
-EBUILD python-2.4.6.ebuild 10883 RMD160 91ff5acfbd5151635394deca043ef3ef661249a1 SHA1 703cb621759955a3af6d0f4ca9db65fcca36f80f SHA256 775c81a4ecb676208dd9b3ecfa997b9441be8f0d00a5ffb828f4afb6057b708d
-EBUILD python-2.5.4-r3.ebuild 11834 RMD160 ea9dc6a2d763388a2472a55fe5c858c945517668 SHA1 ea7ade7a74eeff5a4279156e503110bf2a55e89c SHA256 c4e3703eb6aceda3d758e0fcd9d18d901a2fa935735c2f13e9c3bcfff13bed66
-EBUILD python-2.6.2-r01.4.ebuild 18951 RMD160 56120d8fa6466e96868d06f4dba51de3da4fcdbc SHA1 4b02d4fc723ac27d912ab75e17e2a9f346dee55b SHA256 797e1c2696be2a98fbe4aab7d27132664bbf39c54e391445cfde4e75e9397e50
-EBUILD python-2.6.2-r2.ebuild 19220 RMD160 5472f46529fcc74235a31d34bf591914ae89bd99 SHA1 b31d7d2bd0d1a271e19efe5f88a153ed289fad6b SHA256 1e4706d6327bbbca51fd82a77924e0e07394c2a13d4ede4334739e3d2a6e634a
-EBUILD python-3.1.1-r1.ebuild 17224 RMD160 6029f85ccfb36765e51ce8cdee1c4fda9afe1fc0 SHA1 6552104c20033317108f93736cc018329c043f8a SHA256 f2e5d8e4621ecaa3b5ae48b34ceeca81a48fd8b9d5de0224a1f2d19f94a09833
-MISC ChangeLog 73407 RMD160 4fa03ec17f6a42a1cc2641cfdebd6c0ae2f62fd5 SHA1 770225ea503729812de6c3fb47702825175c50d8 SHA256 73a6d82a8e3f74c6aca2536fef7668944ebc105b8c170de25c03efcad2ad48ee
+EBUILD python-2.4.6.ebuild 10751 RMD160 3e843d876803c3aff0322bd1eb2afa22246066b0 SHA1 471d90ae58d407192c38d7ce1592bfda59c43063 SHA256 f3973607b5d5b9205c432ab1b772bba7544fbb277d840269fc79b949e40a36d9
+EBUILD python-2.5.4-r3.ebuild 11882 RMD160 0363ce11ed2f1bce791d3f5df3e5429561a6e805 SHA1 0dfcf1a64f897afebb63a2fa3528ccc319ee5c87 SHA256 e897c98c0316cf49dcbee1a8081a7d2a9d244253206f41d1d735a5084e0e8fec
+EBUILD python-2.6.2-r01.4.ebuild 18949 RMD160 cf9328960fafbdf831ff6501984eea044e581e21 SHA1 eb44097a5e6ed1b5b3c128c28dcbc4b63e72ebf8 SHA256 b720b4786955f28cfc3b105d35f1f707aa6bf1bbd1d6ab78b2e80ff175c67347
+EBUILD python-2.6.2-r2.ebuild 19258 RMD160 b6f8a3741c0436ef7a3af8cc17fd861d71444820 SHA1 e03ff08a21d0cc39f8e85057570c0cd0a6a1e9af SHA256 d3fa8c99ad098eef9f742f1a902d72d00a8411a83c05d2f365162c9675887a95
+EBUILD python-3.1.1-r1.ebuild 18208 RMD160 3adf2e1cb0bab4a2f9bfa6af2c63d0aa5a746180 SHA1 4f858b76fa22de295368279c54145cc483256604 SHA256 4a4957bae531352d58ee1e4bb5d5ce2d2613da17e07066c5643606725f29d6bb
+MISC ChangeLog 73819 RMD160 9b22502837e947f7285824a164c6d7bf4679f823 SHA1 36c4749f2e85dec16026624d3e25e3d6043fca38 SHA256 460382ca727ffce23730819d4358b0514e62ea8592a3a25dc8b5d83917fa358f
 MISC metadata.xml 501 RMD160 0cc2c851a7c59ed77809c1f3ac2130710f0700e9 SHA1 59bfd447cf15419f68077913de7228f3556ce6e3 SHA256 51c09ee221463f34722a6c655db605a7d6d683069453d173947e4416a43a071c
