@@ -1,6 +1,16 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.419 2009/09/25 17:20:04 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.421 2009/09/27 17:56:00 arfrever Exp $
+
+  27 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  python-2.4.6.ebuild, python-2.5.4-r3.ebuild, python-2.6.2-r2.ebuild,
+  python-3.1.1-r1.ebuild:
+  Enable "ncurses" and "readline" USE flags by default. Don't activate
+  Python 2 when Python 3 is already active. Ensure that Python 2 is
+  installed.
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> python-2.6.2-r1.ebuild:
+  ppc stable #277645
 
   25 Sep 2009; Zac Medico <zmedico@gentoo.org> python-3.1.1.ebuild,
   python-3.1.1-r1.ebuild:
